k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fixify-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fixify-frontend
  template:
    metadata:
      labels:
        app: fixify-frontend
    spec:
      containers:
        - name: fixify-frontend
          image: utkarshd0d/fixify-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fixify-frontend-service
spec:
  selector:
    app: fixify-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
