k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixify-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: fixify.local
      http:
        paths:
          - path: /backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fixify-backend-service
                port:
                  number: 4000
          - path: /()(.*)          # ← Yeh change karo
            pathType: ImplementationSpecific
            backend:
              service:
                name: fixify-frontend-service
                port:
                  number: 80
